16/02/2017

Changed:
	models of 20Rnd_9x19_EVO(SD) and 30Rnd_9x19_MP5SD magazines to more suitable


13/02/2017

Fixed:
	Mi-24P properly hides bomb proxies when they're used up by gunner
	Pchela-1T had no get in memory points, had wrong get in animation
	MQ-9 Reaper had needless get in animation delay
	Ka-137 and Pchela-1T no longer explode into huge explosion on destruction
	Fire in the sky bug fixed


07/02/2017

Fixed:
	ATV physics when driving on objects like bridges (http://dev.withsix.com/issues/75850)
	ATV handling and bounding issues (http://dev.withsix.com/issues/75851)
	ATV had wrong low LOD texture
	Woodland ATV had desert camo texture


02/02/2017

Fixed:
	MQ-9 Reaper laser designator now precise, propeller correctly turns into blurred one, UAV geometry is visible from gunner view
	Pchela-1T laser designator works properly, squad.xml decals are properly visible, armor and fuel reduced, unlocked unused CDF version


29/01/2017

Fixed:
	appearance of "No owner" messages in RPT file
	armor of body parts of some characters
	portrait picture of some characters


23/01/2017

Fixed:
	laser guidance for MQ-9 Reaper's Hellfire (http://dev.withsix.com/issues/70991)


21/01/2017

Fixed:
	smoke launchers to BMP2_Ambul were not added
	smoke launcher on GAZ_Vodnik_HMG was removed by mistake


22/07/2016

Added:
	some factions and subfactions lack medics and engineers (http://dev.withsix.com/issues/70799)
	new weapons - M4A3_EP1 and M4A3_RCO_EP1 rifles
	possibility to deactivate mines and hide corpses (missed) to saboteurs and some soldiers of special forces
	possibility to switch seat between all seats of UH60M helicopter

Changed:
	reverted and updated CIT #28047 bug fix
	reverted CCP #71037 bug fix to original state
	deleted CCP #71142 bug fix due to it's faulty
	definitions of some optical sights to more realistic
	deleted unnecessary fire mode (@ 2600 SPM) of GSh302K cannon
	external camera rotation angles of tracked vehicles